<resources>
    <string name="app_name">Кликни Оброк</string>
    <string name="forgotPassword"><u>Заборавена лозинка?</u></string>
    <string name="NoAccountText"><u>Немаш корисничка сметка? <b>Регистрирај се</b></u></string>
    <string name="loginButtonText">Најави се</string>
    <string name="fbLoginButtonText">Најави се со facebook</string>
    <string name="usernameHint">Корисничко име</string>
    <string name="passwordHint">Лозинка</string>
    <string name="firstName">Име</string>
    <string name="lastName">Презиме</string>
    <string name="userNameRegister">Корисничко име</string>
    <string name="next">Следно</string>
    <string name="emailHint">Email адреса</string>
    <string name="repeatPassword">Повтори лозинка</string>
    <string name="register">Регистрирај се</string>
    <string name="alreadyRegistered"><u>Веќе си регистриран? <b>Најави се</b></u></string>
    <string name="gettingLocation">Проверка на локација</string>
    <string name="yourLocationIs"><i>Вашата локација е</i></string>
    <string name="otherLocations"><i>Други локации</i></string>
    <string name="loginProgress">Се најавувам, Ве молиме почекајте...</string>
    <string name="registerProgress">Ве молиме почекајте...</string>
    <string name="emptyField">Празно поле</string>
    <string name="notValidEmail">Емаил адресата не е валидна</string>
    <string name="shortPassword">Лозинката мора да содржи најмалку 8 карактери</string>
    <string name="repeatPasswordError">Лозинката не е иста</string>
    <string name="facebook_app_id">1814916868776002</string>
    <string name="com_facebook_loginview_log_in_button_long">Најави се со facebook</string>
    <string name="com_facebook_loginview_log_in_button">Најави се со facebook</string>
    <string name="com_facebook_loginview_log_in_button_continue">Најави се со facebook</string>
    <string name="com_facebook_loginview_log_out_button">Најави се со facebook</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="menu">Мени</string>
    <string name="order">Нарачка</string>
    <string name="callEmployee">Повикај келнер</string>
    <string name="logout">Одјави се</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
