<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <android.support.design.widget.TextInputEditText
            style="@style/PrimaryTextBlack"
            android:id="@+id/registerFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstName"
            android:theme="@style/MyEditText" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextFirstName">

        <android.support.design.widget.TextInputEditText
            style="@style/PrimaryTextBlack"
            android:id="@+id/registerLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastName"
            android:theme="@style/MyEditText" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editTextUserNameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLastName">

    <android.support.design.widget.TextInputEditText
        style="@style/PrimaryTextBlack"
        android:id="@+id/registerUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userNameRegister"
        android:theme="@style/MyEditText" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/next"
        style="@style/PrimaryTextWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextUserNameRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ripple"
        android:text="@string/next"
        android:textSize="20sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:padding="8dp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/alreadyRegistered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/alreadyRegistered"
        android:textColor="@color/colorText" />

</RelativeLayout>